[package]
name = "rpn"
version = "0.1.0"
edition = "2021"

[dependencies]
num-complex = "0.4"
num-rational = "0.4"
num-traits = "0.2"
pretty = { git = "ssh://nalp@nisaba/git/pretty" }
phf = { version = "0.11", features = [ "macros" ] }
paste = "1"

[net]
git-fetch-with-cli = true

# Copyright see AUTHORS & LICENSE; SPDX-License-Identifier: ISC+

